--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1216,6 +1216,60 @@
             </objects>
             <point key="canvasLocation" x="3600.8000000000002" y="-1834.6326836581711"/>
         </scene>
+        <!--Product Picture Controller-->
+        <scene sceneID="UwW-3M-ciI">
+            <objects>
+                <collectionViewController storyboardIdentifier="ProductPictureController" id="V1E-vQ-Ode" customClass="ProductPictureController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="81h-g2-sYt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="mAe-Va-q39">
+                            <size key="itemSize" width="219" height="188"/>
+                            <size key="estimatedItemSize" width="219" height="188"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="defaultCell" id="yco-7n-aNC" customClass="ProductCollectionViewCell2" customModule="SalesEdge" customModuleProvider="target">
+                                <rect key="frame" x="78" y="0.0" width="219" height="188"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cBq-Jm-ld0">
+                                    <rect key="frame" x="0.0" y="0.0" width="219" height="188"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="adL-KK-9jj">
+                                            <rect key="frame" x="5" y="5" width="214" height="181"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZI-Rq-rkY">
+                                            <rect key="frame" x="8" y="162" width="203" height="18"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" systemColor="labelColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="219" height="188"/>
+                                <connections>
+                                    <outlet property="image" destination="adL-KK-9jj" id="OI1-G2-IvR"/>
+                                    <outlet property="label" destination="xZI-Rq-rkY" id="qxo-fH-hgg"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="V1E-vQ-Ode" id="6WS-vF-YzX"/>
+                            <outlet property="delegate" destination="V1E-vQ-Ode" id="fJn-UE-eIa"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DRM-K7-N0G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4628" y="-1835.5322338830586"/>
+        </scene>
         <!--My Show Room List Controller-->
         <scene sceneID="DPC-9r-A0N">
             <objects>
@@ -1769,7 +1823,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="lQL-al-B4s"/>
+        <segue reference="Lod-K2-e7i"/>
         <segue reference="grb-dQ-jcv"/>
         <segue reference="32D-md-z5T"/>
     </inferredMetricsTieBreakers>
@@ -1795,6 +1849,9 @@
         <image name="qrcode-scan-multi" width="40" height="40"/>
         <image name="redcycle" width="20" height="20"/>
         <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="scrollViewTexturedBackgroundColor">
